--- a/frontend/index.html
+++ b/frontend/index.html
@@ -625,20 +625,26 @@
         }
 
         render(props, state) {
-            // TODO local file save/load, copy, ...
+            // TODO <select>/<input>/??? remote filename selections for: tas dump, file upload
+            // TODO remote file list+view+upload (its gonna be gross)
+            // TODO local (web client) file save/load, copy, drop to remote, ...
             // TODO ctrl+enter do_exec()
+            const nsoDisplay = false ? "inline" : "none"; // XXX feature flags in sessionStorage?
             return html`
                 <div class="execscript">
-                    AngelScript
-                    <button title="Run the script below" onClick=${ () => this.do_exec() } class="pushbutton hint_blueprint_strong" style="margin-right:16px;">exec</button>
+                    <span title="Manages AngelScript for the tas stack">AS:</span>
+                    <button title="Run the script below" onClick=${ () => this.do_exec() } class="pushbutton hint_blueprint_strong">exec</button>
+                    <button title="tas::abort()" onClick=${ () => AngelScript.exec("tas::abort();", AngelScript.TAS_MODULE_INTERRUPT) } class="pushbutton hint_destructive_hover">abort</button>
                     <label title="Automatically wrap input into void main() {...} entry point" for="execscript_use_implicit_main">main:</label>
                     <input type="checkbox" id="execscript_use_implicit_main" ref=${this.use_implicit_main_ref} checked />
                     <button title="tas::toggleDump()" onClick=${ () => this.do_toggle_record() } class="pushbutton">tas dump</button>
-                    <button title="tas::abort()" onClick=${ () => AngelScript.exec("tas::abort();", AngelScript.TAS_MODULE_INTERRUPT) } class="pushbutton hint_destructive_hover">abort</button>
                     <button title="WSTransport.send({persistFileString, persistFileName})" onClick=${ () => this.do_trash_upload() } class="pushbutton">⚠️upload</button>
-                    <label title="⚠️update subsdk9 (drop onto button)" for="subsdkupload"> nso: </label><input type="file" title="WSTransport.send({persistFileBinary, persistFileName})" onChange=${this.on_drop_terrifying_subsdk9_upload} class="pushbutton hint_destructive_hover" style="width:32px;" id="subsdkupload" />
+                    <span style="float: right; display: ${nsoDisplay};">
+                        <label title="⚠️update subsdk9 (drop onto button)" for="subsdkupload"> nso: </label>
+                        <input type="file" title="WSTransport.send({persistFileBinary, persistFileName})" onChange=${this.on_drop_terrifying_subsdk9_upload} class="pushbutton hint_destructive_hover" style="width:32px;" id="subsdkupload" />
+                    </span>
                     <br/>
-                    <textarea class="as_source" placeholder='// check the blue AS📖 button for help \nPlayer.pos += 100*Vector3f::UP;\n\ntas::input(30, KEY_A|KEY_B, 32767,-32768, 0,0);\ntas::input(15, KEY_B, 0.5*STICK_UP_MAX /*, 8000*STICK_LEFT */);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos + 5*Vector3f::DOWN\n);' ref=${this.script_text_ref}></textarea>
+                    <textarea class="as_source" placeholder='// check blue AS📖 button below for help \nPlayer.pos += 100*Vector3f::UP;\n\ntas::input(30, KEY_A|KEY_B, 32767,-32768, 0,0);\ntas::input(15, KEY_B, 0.5*STICK_UP_MAX /*, 8000*STICK_LEFT */);\n\nactor::createAndWatch( \n    1, "SpObj_LiftGeneratorWing_A_01", \n    Player.pos + 5*Vector3f::DOWN\n);\n\ntas::awaitExecFile("sdcard:/totk_lotuskit/autorun.as");' ref=${this.script_text_ref}></textarea>
                     <textarea placeholder="[tas output]" ref=${this.output_text_ref}></textarea>
                 </div>
             `;
